--- a/AndroidAgrov.2/app/src/main/res/layout/fragment_registrar.xml
+++ b/AndroidAgrov.2/app/src/main/res/layout/fragment_registrar.xml
@@ -5,129 +5,270 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistrarFragment"
-    android:background="@drawable/fondo">
-
-<LinearLayout
-    android:layout_width="300dp"
-    android:layout_height="500dp"
-    android:layout_gravity="center">
-
-
+    android:background="@drawable/fondo_fin">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-
-        android:background="@drawable/shape_inicio">
-
-        <ImageView
-            android:id="@+id/imageView"
+        android:layout_width="300dp"
+        android:layout_height="500dp"
+        android:layout_gravity="center">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/registrar"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="20dp"
+                android:paddingBottom="30dp"
+                android:background="@drawable/shape_inicio">
 
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/registrar"
+                    android:layout_marginTop="10dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="NOMBRE"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registronombre"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Nombre"
+                    android:inputType="textPersonName"
+                    />
 
-    <EditText
-        android:id="@+id/registronombre"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/gris"
-        android:ems="10"
-        android:hint="Nombre"
-        android:inputType="textPersonName"
-        />
-        <EditText
-            android:id="@+id/registroApellido"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gris"
-            android:ems="10"
-            android:hint="Apellido"
-            android:inputType="textPersonName"
-            />
-        <EditText
-            android:id="@+id/registroCorreo"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gris"
-            android:ems="10"
-            android:hint="@string/Email"
-            android:inputType="textPersonName"
-            />
-        <EditText
-            android:id="@+id/registroCelular"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gris"
-            android:ems="10"
-            android:hint="Celular"
-            android:inputType="textPersonName"
-            />
-        <EditText
-            android:id="@+id/registroDireccion"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/gris"
-            android:ems="10"
-            android:hint="@string/Password"
-            android:inputType="textPersonName"
-            />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="APELLIDO"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroApellido"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Apellido"
+                    android:inputType="textPersonName"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="DOCUMENTO"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroDocumento"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Documento"
+                    android:inputType="textPersonName"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TELEFONO"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroTelefono"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Telefono"
+                    android:inputType="textPersonName"
+                    />
 
-        <Spinner
-            android:id="@+id/SpinerPais"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="20dp"
-            android:background="@color/gris"
-            />
-        <Spinner
-            android:id="@+id/SpinerDepartamento"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="20dp"
-            android:background="@color/gris"
-            />
-        <Spinner
-            android:id="@+id/SpinerCiudad"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="20dp"
-            android:background="@color/gris"
-            />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="CELULAR"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroCelular"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Celular"
+                    android:inputType="textPersonName"
+                    />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="DIRECCION"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroDireccion"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Direccion"
+                    android:inputType="textPersonName"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="PAIS"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroPais"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="Pais"
+                    android:inputType="textPersonName"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="DEPARTAMENTO"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <Spinner
+                    android:id="@+id/SpinnerDepartamentos"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="20dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="MUNICIPIO"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <Spinner
+                    android:id="@+id/SpinnerMunicipio"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="20dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="CORREO"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroCorreo"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="@string/Email"
+                    android:inputType="textPersonName"
+                    />
 
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="CONTRASEÑA"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/registroContraseña"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/blanco_gris"
+                    android:paddingLeft="10dp"
+                    android:ems="10"
+                    android:hint="@string/Password"
+                    android:inputType="textPersonName"
+                    />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
-
-</LinearLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="60dp"
