--- a/AndroidAgrov.2/app/src/main/res/values/SpinnerDepartamentos.xml
+++ b/AndroidAgrov.2/app/src/main/res/values/SpinnerDepartamentos.xml
@@ -8,7 +8,7 @@
         <item>BOYACÁ</item>
         <item>CALDAS</item>
         <item>CAQUETÁ</item>
-        <item>CAUCA'</item>
+        <item>CAUCA</item>
         <item>CESAR</item>
         <item>CÓRDOBA</item>
         <item>CUNDINAMARCA</item>
