--- a/AndroidAgrov.2/app/src/main/res/layout/activity_home.xml
+++ b/AndroidAgrov.2/app/src/main/res/layout/activity_home.xml
@@ -53,6 +53,7 @@
         </androidx.appcompat.widget.AppCompatButton>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/RegistarUsuario"
             android:layout_width="144dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
