--- a/AndroidAgrov.2/app/src/main/res/layout/fragment_cam_detalledespacho.xml
+++ b/AndroidAgrov.2/app/src/main/res/layout/fragment_cam_detalledespacho.xml
@@ -4,120 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".TransPedidosentregarFragment">
+    tools:context=".TransPedidosentregarFragment"
+    android:background="@drawable/fondo_fin">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@drawable/fondo">
-
-    </ImageView>
-
-    <LinearLayout
-        android:layout_width="360dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginStart="25dp"
-        android:background="@drawable/bordeverde">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/eliminar">
-
-        </ImageView>
-
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="-10dp"
-            android:layout_marginTop="80dp"
-            android:src="@drawable/manzanas">
-
-        </ImageView>
-
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:text=" DETALLES DE DESPACHO"
-            android:layout_marginLeft="30dp"
-            android:textColor="@color/green"
-            android:textStyle="bold">
-        </TextView>
-
-        <TextView
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:text="Se encuentra en camino el pedido"
-            android:textAlignment="center"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="-120dp"
-            android:textColor="@color/green"
-            android:textStyle="bold">
-        </TextView>
-
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="155dp"
-            android:layout_marginLeft="-240dp"
-            android:text="Fecha de despacho 28 de Febrero 2023"
-            android:textStyle="bold"
-            android:textColor="@color/black">
-
-        </TextView>
-
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="-250dp"
-            android:layout_marginTop="150dp"
-            android:src="@drawable/linea">
-
-        </ImageView>
-
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="200dp"
-            android:layout_marginLeft="-290dp"
-            android:textColor="@color/black"
-            android:text="          Numero de Pedido               CO123456789   "
-            android:textStyle="bold">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:text="27 de Enero   16:30"
-            android:layout_marginTop="230dp"
-            android:layout_marginLeft="-300dp"
-            android:textColor="@color/black">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="170dp"
-            android:layout_height="60dp"
-            android:text="Orden en camino               La orden se encuentra en camino"
-            android:layout_marginTop="230dp"
-            android:layout_marginLeft="50dp"
-            android:textColor="@color/black">
-
-        </TextView>
-
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/fondo"
-        android:scaleY="1.1">
-    </ImageView>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
