--- a/AndroidAgrov.2/app/src/main/res/values/colors.xml
+++ b/AndroidAgrov.2/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#F63030</color>
     <color name="gris">#636161</color>
     <color name="verdeclaro">#A7ECA9</color>
+    <color name="vereclaro2">#B5A7ECA9</color>
     <color name="blanco_gris">#E4E3E3</color>
     <color name="blancofond">#BABABA</color>
     <color name="transparente">#00000000</color>
