--- a/AndroidAgrov.2/app/src/main/res/drawable/borde_search.xml
+++ b/AndroidAgrov.2/app/src/main/res/drawable/borde_search.xml
@@ -5,7 +5,7 @@
         android:width="5dp">
     </stroke>
     <solid
-        android:color="@color/white"></solid>
+        android:color="@color/vereclaro2"></solid>
     <corners
         android:radius="30dp"></corners>
 </shape>
