--- a/AndroidAgrov.2/app/src/main/res/layout/fragment_cam_ingresarproductos.xml
+++ b/AndroidAgrov.2/app/src/main/res/layout/fragment_cam_ingresarproductos.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/fondo"
+        android:src="@drawable/fondo_fin"
         android:scaleY="1.1">
     </ImageView>
     <FrameLayout
