--- a/AndroidAgrov.2/app/src/main/res/layout/fragment_cam_soportetecnico.xml
+++ b/AndroidAgrov.2/app/src/main/res/layout/fragment_cam_soportetecnico.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/fondo"
+        android:src="@drawable/fondo_fin"
         android:scaleY="1.1">
     </ImageView>
     <FrameLayout
@@ -22,6 +22,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
                 android:orientation="horizontal">
                 <androidx.cardview.widget.CardView
                     android:layout_width="300dp"
