--- a/AndroidAgrov.2/app/src/main/res/layout/fragment_trans_pedidosentregar.xml
+++ b/AndroidAgrov.2/app/src/main/res/layout/fragment_trans_pedidosentregar.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@drawable/fondo">
+        android:background="@drawable/fondo_fin">
 
     </ImageView>
 
